--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,17 +4,18 @@
         <h2 class="subtitle is-4">Outpass Portal</h2>
         <h2 class="subtitle is-5">Manipal University Jaipur</h2>
         <hr>
+        <form action="/submit" method="post">
         <div class="field">
             <label class="label">Name</label>
             <div class="control">
-                <input class="input" type="text" placeholder="Text input">
+                <input class="input" type="text" name="name" id="name" placeholder="Text input">
             </div>
         </div>
 
         <div class="field">
             <label class="label">Registration Number</label>
             <div class="control has-icons-left has-icons-right">
-                <input class="input " type="text" placeholder="Text input" value="">
+                <input class="input" name="reg" id="reg" type="text" placeholder="Text input" value="">
                 <span class="icon is-small is-left">
                     <i class="fas fa-user"></i>
                 </span>
@@ -28,7 +29,7 @@
         <div class="field">
             <label class="label">Email (OUTLOOK) </label>
             <div class="control has-icons-left has-icons-right">
-                <input class="input" type="email" placeholder="Email input" value="">
+                <input class="input" name="email" id="email" type="email" placeholder="Email input" value="">
                 <span class="icon is-small is-left">
                     <i class="fas fa-envelope"></i>
                 </span>
@@ -44,9 +45,9 @@
             <div class="control">
                 <div class="select">
                     <select>
-                        <option value="">Chief Warden</option>
-                        <option value="">Manoj Sir</option>
-                        <option value="">SIR 2</option>
+                        <option value="Chief Warden" id="block-warden">Chief Warden</option>
+                        <option value="Manoj Sir" name="block-warden" id="block-warden">Manoj Sir</option>
+                        <option value="sir 2" name="block-warden" id="block-warden">SIR 2</option>
                     </select>
                 </div>
             </div>
@@ -56,60 +57,63 @@
             <div class="control">
                 <div class="select">
                     <select>
-                        <option value="">B1</option>
-                        <option value="">B2</option>
-                        <option value="">B3</option>
-                        <option value="">B4</option>
-                        <option value="">B5</option>
-                        <option value="">B6</option>
-                        <option value="">B7</option>
-                        <option value="">G1</option>
-                        <option value="">G2</option>
-                        <option value="">G3</option>
-                        <option value="">G4</option>
-                        <option value="">G5</option>
+                        <option id="block" name="block" value="B1">B1</option>
+                        <option id="block" name="block" value="B2">B2</option>
+                        <option id="block" name="block" value="B3">B3</option>
+                        <option id="block" name="block" value="B3">B4</option>
+                        <option id="block" name="block" value="B5">B5</option>
+                        <option id="block" name="block" value="B6">B6</option>
+                        <option id="block" name="block" value="B7">B7</option>
+                        <option id="block" name="block" value="G1">G1</option>
+                        <option id="block" name="block" value="G2">G2</option>
+                        <option id="block" name="block" value="G3">G3</option>
+                        <option id="block" name="block" value="G4">G4</option>
+                        <option id="block" name="block" value="G5">G5</option>
                     </select>
+                </div>
+            </div>
+
+            <div class="field">
+                <label class="label">REASON</label>
+                <div class="control">
+                    <textarea class="textarea" id="reason" name="reason" placeholder="Textarea"></textarea>
+                </div>
+            </div>
+
+            <div class="field">
+                <div class="control">
+                    <label class="checkbox">
+                        <input type="checkbox">
+                        I agree to the <a href="#">terms and conditions</a>
+                    </label>
+                </div>
+            </div>
+
+            <div class="field">
+                <label class="label">Parent Consent</label>
+                <div class="control">
+                    <label class="radio">
+                        <input type="radio" name="question">
+                        Yes
+                    </label>
+                    <label class="radio">
+                        <input type="radio" name="question">
+                        No
+                    </label>
+                </div>
+            </div>
+
+            <div class="field is-grouped">
+                <div class="control">
+                    <button class="button is-link">Submit</button>
+                </div>
+                <div class="control">
+                    <button class="button is-link is-light">Cancel</button>
                 </div>
             </div>
         </div>
 
-        <div class="field">
-            <label class="label">REASON</label>
-            <div class="control">
-                <textarea class="textarea" placeholder="Textarea"></textarea>
-            </div>
-        </div>
 
-        <div class="field">
-            <div class="control">
-                <label class="checkbox">
-                    <input type="checkbox">
-                    I agree to the <a href="#">terms and conditions</a>
-                </label>
-            </div>
-        </div>
-
-        <div class="field">
-            <label class="label">Parent Consent</label>
-            <div class="control">
-                <label class="radio">
-                    <input type="radio" name="question">
-                    Yes
-                </label>
-                <label class="radio">
-                    <input type="radio" name="question">
-                    No
-                </label>
-            </div>
-        </div>
-
-        <div class="field is-grouped">
-            <div class="control">
-                <button class="button is-link">Submit</button>
-            </div>
-            <div class="control">
-                <button class="button is-link is-light">Cancel</button>
-            </div>
-        </div>
     </div>
+    </form>
     <%-include('partials/footer'); -%>
