--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -79,7 +79,7 @@
                         <!-- <a class="button is-dark">
                             <strong>Sign up</strong>
                         </a> -->
-                        <a class="button is-normal">
+                        <a class="button is-normal" href="/login">
                             Log in
                         </a>
                     </div>
