--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -1,3 +1,14 @@
-.area{
-    padding: 5% 10%;
+html {
+  height: 100%;
+}
+
+body {
+  min-height: 100vh;
+  margin: 0;
+
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+.area {
+  padding: 5% 10%;
 }
