--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,4 @@
-<%-include('partials/header')-%>
+<%-include('partials/header')%>
     <div class="area">
         <h1 class="title">Login</h1>
         <hr>
