--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -44,7 +44,7 @@
                     Status
                 </a>
                 <a class="navbar-item" href="/">
-                  Block Wardens
+                    Block Wardens
                 </a>
 
                 <!-- <div class="navbar-item has-dropdown is-hoverable">
@@ -72,16 +72,22 @@
 
             <div class="navbar-end">
                 <div class="navbar-item">
-                 <div class="navbar-item">
-<p>Administrator</p>
-                 </div>
+                    <div class="navbar-item">
+                        <p>Administrator</p>
+                    </div>
                     <div class="buttons">
                         <!-- <a class="button is-dark">
                             <strong>Sign up</strong>
                         </a> -->
+
+                        <a class="button is-normal" href="/logout">
+                            Log out
+                        </a>
+
                         <a class="button is-normal" href="/login">
                             Log in
                         </a>
+
                     </div>
                 </div>
             </div>
