--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,7 @@
     <title>GHS - Outpass Portal</title>
 </head>
 <header>
-    <nav class="navbar is-light" role="navigation" aria-label="main navigation">
+    <nav class="navbar is-danger" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item" href="/">
                 <b>GHS - Outpass</b>
@@ -40,7 +40,7 @@
                     Home
                 </a>
 
-                <a class="navbar-item" href="/">
+                <a class="navbar-item" href="/status">
                     Status
                 </a>
                 <a class="navbar-item" href="/">
