--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -33,8 +33,9 @@
             GoodhostSpaces Private Limited - Manipal University Jaipur
         </p>
         <p>
-            ©2020 Manipal University Jaipur, Jaipur-Ajmer Expressway, Rajasthan 303007
+            ©2022 Manipal University Jaipur, Jaipur-Ajmer Expressway, Rajasthan 303007
         </p>
+        <p>A Project By Rajit Kuthiala</p>
     </div>
 </footer>
 
