--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -43,7 +43,7 @@
                 <a class="navbar-item" href="/status">
                     Status
                 </a>
-                <a class="navbar-item" href="/">
+                <a class="navbar-item" href="/blockwarden">
                     Block Wardens
                 </a>
 
