--- a/views/requests.ejs
+++ b/views/requests.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') -%>
     <div class="area">
-        <table class="table is-striped">
+        <table class="table is-striped has-text-left is-hoverable">
             <thead>
                 <tr>
                     <th>S.No</th>
